--- a/CLIENT/templates/dashboard.html
+++ b/CLIENT/templates/dashboard.html
@@ -20,6 +20,12 @@
                         <p>Profile utilisateur</p>
                     </a>
                 </li>
+                <li ng-if="isAdmin == true">
+                    <a href="#/users">
+                        <i class="pe-7s-users"></i>
+                        <p>Liste des utilisateurs</p>
+                    </a>
+                </li>
             </ul>
         </div>
     </div>
