--- a/CLIENT/templates/dashboard.html
+++ b/CLIENT/templates/dashboard.html
@@ -53,7 +53,7 @@
                     <!--</ul>-->
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                            <a href="#">
+                            <a href="#" ng-click="disconnect($event)">
                                 Se déconnecter
                             </a>
                         </li>
