--- a/CLIENT/templates/users.html
+++ b/CLIENT/templates/users.html
@@ -83,7 +83,7 @@
                                 <td>{{user.lastname}}</td>
                                 <td>{{user.name}}</td>
                                 <td>{{user.email}}</td>
-                                <td >
+                                <td>
                                     <span ng-if="user.active == 0">
                                         Bannie
                                     </span>
@@ -91,7 +91,11 @@
                                         Actif
                                     </span>
                                 </td>
-                                <td>
+
+                                <td ng-if="myId == user.id"></td>
+                                <td ng-if="myId == user.id"></td>
+
+                                <td ng-if="myId !== user.id">
                                     <a ng-if="user.active == 0" href="" ng-click="debanne(user.id)">
                                         Débannir
                                     </a>
@@ -99,7 +103,7 @@
                                         Bannir
                                     </a>
                                 </td>
-                                <td>
+                                <td ng-if="myId !== user.id">
                                     <a href="" ng-click="delete(user.id)">
                                         Supprimer
                                     </a>
